--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,14 +13,27 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "classnames": "^2.2.6",
+    "fontsource-roboto": "^3.0.3",
+    "immer": "^7.0.8",
+    "lodash": "^4.17.20",
+    "lscache": "^1.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "rxjs": "^6.6.2",
+    "tailwindcss": "^1.7.6",
+    "typescript": "~3.7.2",
+    "unstated": "^2.1.1",
+    "unstated-typescript": "^2.1.7"
   },
   "scripts": {
+    "build:css": "tailwindcss build ./tailwind.css -o src/tailwind.css",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "pre:start": "yarn build:css && yarn start",
+    "run": "cd docs && python -m SimpleHTTPServer 7800",
+    "git": "git add . && git commit -m \"fb api integration\" && git push",
+    "build": "react-scripts build && rm -rf docs && mv build docs && node build & yarn git",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
