--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,14 +14,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.8.0",
     "fontsource-roboto": "^3.0.3",
+    "history": "4.10.1",
     "immer": "^7.0.8",
     "lodash": "^4.17.20",
     "lscache": "^1.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux-observable": "^1.2.0",
     "rxjs": "^6.6.2",
     "tailwindcss": "^1.7.6",
     "typescript": "~3.7.2",
