--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lodash": "^4.17.20",
     "lscache": "^1.3.0",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -39,9 +41,9 @@
     "build:css": "tailwindcss build ./tailwind.css -o src/tailwind.css",
     "start": "react-scripts start",
     "pre:start": "yarn build:css && yarn start",
-    "run": "cd docs && python -m SimpleHTTPServer 7800",
-    "git": "git add . && git commit -m \"fb api integration\" && git push",
-    "build": "react-scripts build && rm -rf docs && mv build docs && node build & yarn git",
+    "run:build": "cd docs && python -m SimpleHTTPServer 7800",
+    "git": "git add . && git commit -m \"docs rebuild\" && git push",
+    "build": "react-scripts build && rm -rf docs && mv build docs && node build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
